--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </div>
         <div class="side-bar"></div>
         <div class="workspace"></div>
-        <div class="code-space">
-            <div class="code-line" contenteditable=true></div>
+        <div class="code-space" contenteditable=true>
+            <div class="code-line"> </div>
         </div>
     </body>
 </html>
