--- a/index.html
+++ b/index.html
@@ -6,15 +6,53 @@
     </head>
     <body>
         <div class="menu-bar">
-            <button id="file-menu">File</button>
-            <button id="edit-menu">Edit</button>
+            <button id="file-menu">File
+                <!--
+                <div id="file-dropdown">
+                    <ul>New File</ul>
+                    <ul>New Window</ul>
+                    <ul>Open File</ul>
+                    <ul>Open Folder</ul>
+                    <ul>Save</ul>
+                    <ul>Save As...</ul>
+                </div>
+                -->
+            </button>
+            <button id="edit-menu">Edit
+                <!--
+                <div id="edit-dropdown">
+                    <ul>Undo</ul>
+                    <ul>Redo</ul>
+                    <ul>Cut</ul>
+                    <ul>Copy</ul>
+                    <ul>Paste</ul>
+                    <ul>Find</ul>
+                    <ul>Replace</ul>
+                </div>
+                -->
+            </button>
             <button id="view-menu">View</button>
-            <button id="terminal-menu">Terminal</button>
+            <button id="terminal-menu">Terminal
+                <!--
+                <div id="terminal-dropdown">
+                    <ul>New Terminal</ul>
+                
+                </div>
+                -->
+            </button>
+            <button id="help-menu">Help
+                <!--
+                <div id="help-dropdown">
+                    <ul>Welcome</ul>
+                    <ul>Documentations</ul>
+                </div>
+                -->
+            </button>
         </div>
         <div class="side-bar"></div>
         <div class="workspace"></div>
         <div class="code-space" contenteditable=true>
-            <div class="code-line"> </div>
+            <div class="code-line"></div>
         </div>
     </body>
 </html>
