--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     </head>
     <body>
         <div class="menu-bar">
-            <button id="file-menu">File
-                <!--
-                <div id="file-dropdown">
+            <button class="dropdown-button">File
+                <div class="dropdown">
                     <ul>New File</ul>
                     <ul>New Window</ul>
                     <ul>Open File</ul>
@@ -16,11 +15,9 @@
                     <ul>Save</ul>
                     <ul>Save As...</ul>
                 </div>
-                -->
             </button>
-            <button id="edit-menu">Edit
-                <!--
-                <div id="edit-dropdown">
+            <button class="dropdown-button">Edit
+                <div class="dropdown">
                     <ul>Undo</ul>
                     <ul>Redo</ul>
                     <ul>Cut</ul>
@@ -29,29 +26,27 @@
                     <ul>Find</ul>
                     <ul>Replace</ul>
                 </div>
-                -->
             </button>
-            <button id="view-menu">View</button>
-            <button id="terminal-menu">Terminal
-                <!--
-                <div id="terminal-dropdown">
+            <button class="dropdown-button">View</button>
+            <button class="dropdown-button">Terminal
+                <div class="dropdown">
                     <ul>New Terminal</ul>
-                
                 </div>
-                -->
             </button>
-            <button id="help-menu">Help
-                <!--
-                <div id="help-dropdown">
+            <button class="dropdown-button">Help
+                <div class="dropdown">
                     <ul>Welcome</ul>
                     <ul>Documentations</ul>
                 </div>
-                -->
             </button>
         </div>
-        <div class="side-bar"></div>
-        <div class="workspace"></div>
-        <div class="code-space" contenteditable=true>
+        <div class="workspace">
+            <button class="workspace-button" data-for-tab="1">Untitled-1</button>
+            <!--<button class="workspace-button">Untitled-2</button>
+            <button class="workspace-button">Untitled-3</button>-->
+        </div>
+        <div class="directory-bar"></div>
+        <div class="code-space" contenteditable=true data-tab="1">
             <div class="code-line"></div>
         </div>
     </body>
