--- a/index.html
+++ b/index.html
@@ -43,11 +43,16 @@
         <div class="workspace">
             <!-- Consider grouping tab with closing x via div (of two buttons) -->
             <button id="new-tab" onclick="createNewTab()">+</button>
-            <button class="workspace-button">Untitled</button>
+            <div class="workspace-tab">Untitled
+                <button class="close-tab">x</button>
+            </div>
         </div>
         <div class="directory-bar"></div>
         <div class="code-space" contenteditable=true data-tab="1">
             <div class="code-line"></div>
+        </div>
+        <div class="supplement-bar">
+            <button id=docType>docType</button>
         </div>
     </body>
 </html>
