--- a/index.html
+++ b/index.html
@@ -43,16 +43,20 @@
         <div class="workspace">
             <!-- Consider grouping tab with closing x via div (of two buttons) -->
             <button id="new-tab" onclick="updateTabs()">+</button>
-            <div class="workspace-tab">Untitled
+            <!--<div class="workspace-tab">TestTab
                 <button class="close-tab">x</button>
-            </div>
+            </div>-->
         </div>
         <div class="directory-bar"></div>
+        <!--
         <div class="code-space" contenteditable=true tab="1">
             <div class="code-line"></div>
-        </div>
+        </div>-->
         <div class="supplement-bar">
             <button id=docType>docType</button>
         </div>
+        <script>
+            updateTabs();
+        </script>
     </body>
 </html>
