--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <div class="dropdown">
                     <ul>New File</ul>
                     <ul>New Window</ul>
-                    <ul>Open File</ul>
+                    <ul onclick="openFile()">Open File</ul>
                     <ul>Open Folder</ul>
                     <ul>Save</ul>
                     <ul>Save As...</ul>
