--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <button class="dropdown-button">File
                 <div class="dropdown">
                     <ul>New File</ul>
-                    <ul onclick="updateTabs()">New Window</ul>
+                    <ul onclick="newWindow()">New Window</ul>
                     <ul onclick="openFile()">Open File</ul>
                     <ul>Open Folder</ul>
                     <ul>Save</ul>
