--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     <ul onclick="newWindow()">New Window</ul>
                     <ul onclick="openFile()">Open File</ul>
                     <ul>Open Folder</ul>
-                    <ul>Save</ul>
+                    <ul id="file-save">Save</ul>
                     <ul>Save As...</ul>
                 </div>
             </button>
