--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
                     <ul>New File</ul>
                     <ul onclick="newWindow()">New Window</ul>
                     <ul onclick="openFile()">Open File</ul>
-                    <ul>Open Folder</ul>
                     <ul onclick="fileSave()">Save</ul>
-                    <ul>Save As...</ul>
+                    <ul onclick="saveAs()">Save As...</ul>
                 </div>
             </button>
             <button class="dropdown-button">Edit
