--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <ul>Paste</ul>
                     <ul>Find</ul>
                     <ul>Replace</ul>
+                    <ul onclick='highlightCode()'>Highlight</ul>
                 </div>
             </button>
             <button class="dropdown-button">View</button>
